<resources>
    <string name="app_name">TäbyFK</string>
    <string name="prompt_email">Email</string>

    <!-- Errors -->
    <string name="error_email_empty">E-mail får inte vara tomt</string>
    <string name="error_email_no_at">Felaktig email adress</string>
    <string name="error_password">Lösenord får inte vara tomt</string>
    <string name="error_password_too_short">Lösenordet måste vara längre än 5 tecken</string>
    <string name="error_send_email_password">Kunde inte skicka ut nytt lösenord</string>
    <string name="error_email_message">Ange en riktig e-mail</string>
    <string name="error_email_password">Fel e-mail eller lösenord</string>
    <string name="error_email_used">"E-mail som angavs har redan blivit använd</string>
    <string name="error_login_title">Kunde inte logga in</string>
    <string name="error_create_title">Kan inte skapa ett konto</string>
    <string name="prompt_password">Lösenord</string>
    <string name="email_and_password_message">"Vänligen fyll i e-mail och/eller lösenord"</string>
    <string name="error_invalid_email">Den givna e-mail existerar ej</string>
    <string name="error_invalid_password">Lösenordet är för kort", "Lösenordet måste vara minst 6 tecken långt</string>
    <string name="error_incorrect_password">"Lösenorden matchar inte", "Var god försök igen"</string>
    <string name="error_condition">Påminnelse om villkor</string>
    <string name="error_condition_accept">Ni måste acceptera villkoren</string>
    <string name="error_field_required">This field is required</string>

    <string name="empty"></string>
    <string name="title_activity_offer">OfferActivity</string>
    <string name="title_create_account">Registrera konto</string>
    <string name="title_password_remind">Återställ lösenord</string>
    <string name="button_temporary_deals">Tillfälliga deals</string>
    <string name="button_tfk_partners">TFK-partners</string>
    <string name="button_super_deals">Super deals</string>
    <string name="button_offers">Erbjudanden</string>
    <string name="button_first_name">Förnamn</string>
    <string name="button_last_name">Efternamn</string>
    <string name="button_email">Email</string>
    <string name="button_login">Logga in</string>
    <string name="button_password">Lösenord</string>
    <string name="button_password_remind">Glömt lösenord?</string>
    <string name="button_password_verify">Lösenord (igen)</string>
    <string name="button_activation_code">Aktiveringskod</string>
    <string name="button_create">Skapa konto</string>
    <string name="button_cancel">Avbryt</string>
    <string name="button_close">Stäng</string>
    <string name="button_read_terms_and_conditions">Allmäna villkor </string>
    <string name="button_companies">Företag</string>
    <string name="button_categories">Branscher</string>
    <string name="button_all_offers">Se alla erbjudanden</string>
    <string name="terms_and_condition">
        Genom att logga in i appen godkänner du att Täby FK tar del av den personliga information som registreras.
        Du bekräftar att du är 18 år alternativt att du har målsmans tillåtelse att logga in i appen.
        Täby FK har tillåtelse att samla information rörande hur många erbjudanden som utnyttjas,
        vilken användare som utnyttjar respektive erbjudande, samt därefter använda detta i marknadsföringssyfte.
        Täby FK får också tillåtelse att skicka ut sms till respektive användare när ett nytt erbjudande blir brukbart.
        Användaren har därefter möjlighet att tacka nej till att få erbjudanden via sms om så önskas.
    </string>
    <string name="text_accept_terms_and_conditions">
        Jag intygar att jag har tagit del av och accepterar villkoren
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity">TÄBY FOTBOLLSKLUBB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="message_use_offer">Vill du förbruka detta erbjudande?</string>
    <string name="message_yes">Ja</string>
    <string name="message_no">Nej</string>
    <string name="message_email_send">Mail utskickat</string>
    <string name="message_email_send_info">Tack, vi har skickat ut en länk till din e-mail</string>

    <!-- CategoryActivity -->
    <string name="message_no_offers">Tyvärr finns det inga erbjudande just nu</string>

    <!-- CreateAccountActivity -->
    <string name="message_all_fields">Fyll i alla fält", "Alla fält måste vara ifyllda</string>
    <string name="activation_code">Ogiltig aktiveringskod</string>
    <string name="activation_code_used">Aktiveringskod är redan använd</string>
    <string name="activation_code_invalid">Aktiveringskod är ej giltig</string>

    <string name="deal_valid">Giltig t.om.</string>

    <!-- CompanyActivity -->
    <string name="company_activity_url">https://www.tabyfkappen.se/api/v1/image/</string>
    <string name="company_activity_visiting_address">"Besöksadress:\n" %1$s</string>
    <string name="company_activity_opening_hours">"Öppettider:\n" %1$s</string>

</resources>
