<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@drawable/back_ground_gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/title_create_account"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/button_first_name"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/button_last_name"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/button_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/button_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etPasswordVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/button_password_verify"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/button_activation_code"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray" />

            <Button
                android:id="@+id/bTermsCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/button_read_terms_and_conditions"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/cbTermsCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/text_accept_terms_and_conditions"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_cancel" />

                <Button
                    android:id="@+id/bCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_create" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
