<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_ground_gradient"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llButtonTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCompanyList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button_companies"
                android:textColor="@android:color/white"></Button>

            <Button
                android:id="@+id/bCategoryList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="@string/button_categories"></Button>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FFFFFF"
            android:clickable="true"/>

        <ScrollView
            android:id="@+id/super_deals_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:fillViewport="true">

            <GridView
                android:id="@+id/gList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:verticalSpacing="0dp"
                android:horizontalSpacing="0dp"
                android:stretchMode="columnWidth"
                android:numColumns="3">
            </GridView>

        </ScrollView>

       <LinearLayout
            android:id="@+id/buttonsBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/small_bg"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bShowOffers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button_offers"
                android:textColor="@android:color/white"></Button>

            <Button
                android:id="@+id/bTFKpartners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="@string/button_tfk_partners">

            </Button>
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lNavDeals"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white" />

</android.support.v4.widget.DrawerLayout>

