<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_ground_gradient"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llButtonTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bSuperDeals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button_super_deals"
                android:textColor="@android:color/white"
                tools:ignore="NestedWeights"></Button>

            <Button
                android:id="@+id/bTemporaryDeals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="@string/button_temporary_deals"
                tools:ignore="NestedWeights"></Button>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FFFFFF" />

        <ScrollView
            android:id="@+id/super_deals_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:fillViewport="true">

            <ListView
                android:id="@+id/lvItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/white"
                android:dividerHeight="1dip">
            </ListView>

        </ScrollView>

        <LinearLayout
            android:id="@+id/buttonsBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/small_bg"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bShowOffers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="@string/button_offers"
                tools:ignore="NestedWeights"></Button>

            <Button
                android:id="@+id/bTFKpartners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button_tfk_partners"
                android:textColor="@android:color/white"
                tools:ignore="NestedWeights">

            </Button>
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lNavDeals"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white" />

</android.support.v4.widget.DrawerLayout>

